--- a/index.html
+++ b/index.html
@@ -2,22 +2,47 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>just project</title>
-    <link rel="stylesheet" href="css/normalize.css">
+    <title>Module 3</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <ul class="simple-list">
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
+    <div class="wrapper">
+    <h2>AGENCY PROFILE</h2>
+    <img src="https://image.ibb.co/f3hRUv/plane.png" alt="picture of a guy">
+    <h4>Lorem ipsum dolor sit amet.</h4>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <h2>OUR PRINCIPLES</h2>
+    <ol>
+      <li>
+        <h3>work faster</h3>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </li>
+      <li>
+        <h3>work better</h3>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </li>
+      <li>
+        <h3>work smarter</h3>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </li>
+    </ol>
+    <h2>WHAT WE OFFER</h2>
+    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, officia.</h3>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    </p>
+    <ul>
+      <li>a</li>
+      <li>b</li>
+      <li>c</li>
+      <li>d</li>
+      <li>e</li>
+      <li>f</li>
+      <li>g</li>
+      <li>h</li>
     </ul>
+  </div>
   </body>
 </html>
