--- a/index.html
+++ b/index.html
@@ -4,45 +4,44 @@
     <meta charset="utf-8">
     <title>Module 3</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900,900i" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
-    <h2>AGENCY PROFILE</h2>
-    <img src="https://image.ibb.co/f3hRUv/plane.png" alt="picture of a guy">
-    <h4>Lorem ipsum dolor sit amet.</h4>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <h2>OUR PRINCIPLES</h2>
-    <ol>
-      <li>
+      <div>
+        <h2>AGENCY PROFILE</h2>
+        <img src="https://image.ibb.co/f3hRUv/plane.png" alt="picture of a guy">
+        <h4>Lorem ipsum dolor sit amet.</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </div>
+      <div class="line">
+        <h2>OUR PRINCIPLES</h2>
         <h3>work faster</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
-      </li>
-      <li>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, culpa.</p>
         <h3>work better</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
-      </li>
-      <li>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, numquam.</p>
         <h3>work smarter</h3>
-        <p>Lorem ipsum dolor sit amet.</p>
-      </li>
-    </ol>
-    <h2>WHAT WE OFFER</h2>
-    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, officia.</h3>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    </p>
-    <ul>
-      <li>a</li>
-      <li>b</li>
-      <li>c</li>
-      <li>d</li>
-      <li>e</li>
-      <li>f</li>
-      <li>g</li>
-      <li>h</li>
-    </ul>
-  </div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, dignissimos.</p>
+      </div>
+      <div>
+        <h2>WHAT WE OFFER</h2>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, officia.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <ul>
+          <li>a</li>
+          <li>b</li>
+          <li>c</li>
+          <li>d</li>
+          <li>e</li>
+          <li>f</li>
+          <li>g</li>
+          <li>h</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
