--- a/index.html
+++ b/index.html
@@ -22,16 +22,20 @@
         </div>
         <div class="two">
           <h2>OUR PRINCIPLES</h2>
-          <ol>
-            <li class="first">
+          <ol class="first">
+            <li>
               <h3>work faster</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, culpa.</p>
             </li>
-            <li class="second">
+          </ol>
+          <ol class="second">
+            <li>
               <h3>work better</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, numquam.</p>
             </li>
-            <li class="third">
+          </ol>
+          <ol class="third">
+            <li>
               <h3>work smarter</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, dignissimos.</p>
             </li>
