--- a/index.html
+++ b/index.html
@@ -2,78 +2,69 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Module 4</title>
+    <title>Module 5</title>
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
-      <div class="line">
-        <div class="one">
-          <h2>AGENCY PROFILE</h2>
-          <img src="img/sw2.jpg" alt="Luke, I'm yor father!" width="400">
-          <h4>Lorem ipsum dolor sit amet.</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta minima maiores totam dolor alias obcaecati provident nesciunt eaque impedit, ducimus necessitatibus porro facere atque accusamus a, tenetur numquam, sapiente ratione architecto suscipit veritatis magnam odit! Aperiam eum hic ipsum esse error tempore placeat nostrum. Voluptates explicabo voluptatem ipsam earum tempore, qui temporibus, laboriosam molestias a, quos incidunt. Repudiandae, iusto, id.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, ipsa sit. Eum, necessitatibus eaque dolore modi amet libero repellat earum vitae at eligendi. Saepe eius, ut aspernatur aut cumque! Dolorem sapiente dolores labore consectetur cupiditate voluptate rem et placeat obcaecati, a, nobis quia fugit vel expedita aliquam sequi nulla architecto doloribus, pariatur reprehenderit molestiae similique commodi laboriosam mollitia. Velit excepturi ad suscipit asperiores optio natus atque iusto, numquam, quaerat nostrum quia culpa distinctio. Rerum laborum quidem quasi praesentium esse. Nihil.
-          </p>
+      <header class="top">
+        <ul class="menu">
+          <li class="menu__item">HOME</li>
+          <li class="menu__item">ABOUT
+            <ul class="submenu">
+              <li class="submenu__item">AGENCY</li>
+              <li class="submenu__item">NEWS</li>
+              <li class="submenu__item">TEAM</li>
+            </ul>
+          </li>
+          <li class="menu__item">GALLERY</li>
+          <li class="journey", class="menu__item">
+            <h1>JOURNEY</h1>
+          </li>
+          <li class="menu__item">TOUR</li>
+          <li class="menu__item">BLOG</li>
+          <li class="menu__item">CONTACTS</li>
+        </ul>
+      </header>
+      <main class="fon">
+        <div class="boat">
+          <div class="white">THERE ARE PLENTY OF PLACES</div>
+          <div class="blue">THAT ARE WORTH SEEING</div>
+          <div class="square1"><button><a href=""></a><img src="img/right.png" alt=""></button></div>
+          <div class="square2"><button><a href=""></a><img src="img/left.png" alt=""></button></div>
         </div>
-        <div class="two">
-          <h2>OUR PRINCIPLES</h2>
-          <ol class="first">
-            <li>
-              <h3>work faster</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, culpa.</p>
-            </li>
-          </ol>
-          <ol class="second">
-            <li>
-              <h3>work better</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, numquam.</p>
-            </li>
-          </ol>
-          <ol class="third">
-            <li>
-              <h3>work smarter</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, dignissimos.</p>
-            </li>
-          </ol>
-        </div>
-      </div>
-        <div class="three">
-          <h2>WHAT WE OFFER</h2>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid vel blanditiis quis debitis dignissimos dolor deleniti sed, voluptas praesentium expedita illum sequi aspernatur tempore harum, sit neque quibusdam nobis. Atque!</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe porro minus quibusdam, quisquam nulla iusto placeat id totam dignissimos aliquid molestiae ea libero, numquam at assumenda, quaerat, perspiciatis sequi eveniet deserunt quis. Libero autem ducimus voluptas, corporis pariatur id consectetur! Totam voluptates iure deserunt ratione, veniam, unde ea officia et magni, voluptatem rem architecto necessitatibus error ex minus eum doloribus. Esse, earum perferendis est tempora unde magnam itaque odio non, dicta, neque voluptatem cumque quaerat cupiditate provident. Asperiores, debitis, et.
-          </p>
-          <ul>
-            <li>Metallica</li>
-            <li>While She Sleeps</li>
-            <li>Enter Shikari</li>
-            <li>Architects</li>
-          </ul>
-          <ul>
-            <li>A Day To Remember</li>
-            <li>Bring Me The Horizon</li>
-            <li>Adept</li>
-            <li>Attila</li>
-          </ul>
-        </div>
-        <div class="four">
-          <h2>TESTIMONAL</h2>
-          <div class="frame">
-            <p class="quotes">
-              Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit. Officiis doloribus fugiat rem fugit deleniti, incidunt!
-            </p>
+        <div>
+          <h2>TOP DESTINATIONS</h2>
+          <div class="destination">
+            <div class="vien">
+              <div class="inside">
+                <h3>VIEN</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, expedita.</p>
+                <button class="details"><a href="">Details</a></button>
+              </div>
+            </div>
+            <div class="york">
+              <div class="inside">
+                <h3>NEW YORK</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, expedita.</p>
+                <button class="details"><a href="">Details</a></button>
+              </div>
+            </div>
+            <div class="paris">
+              <div class="inside">
+                <h3>PARIS</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, expedita.</p>
+                <button class="details"><a href="">Details</a></button>
+              </div>
+            </div>
           </div>
-          <div class="name">
-            <p class="blue">Mark Johnson</p>
-            <p class="size">Director of Product Management</p>
-          </div>
+          <button  class="totop">
+            <a href="#"><img src="img/to-top.png" alt=""> </a>
+          </button>
         </div>
+      </main>
     </div>
   </body>
 </html>
