--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
           <li class="menu__item">HOME</li>
           <li class="menu__item">ABOUT
             <ul class="submenu">
-              <li class="submenu__item">AGENCY</li>
-              <li class="submenu__item">NEWS</li>
-              <li class="submenu__item">TEAM</li>
+              <li class="submenu__item"><a href="#">AGENCY</a></li>
+              <li class="submenu__item"><a href="#">NEWS</a></li>
+              <li class="submenu__item"><a href="#">TEAM</a></li>
             </ul>
           </li>
           <li class="menu__item">GALLERY</li>
-          <li class="journey", class="menu__item">
+          <li class="journey menu__item">
             <h1>JOURNEY</h1>
           </li>
-          <li class="menu__item">TOUR</li>
+          <li class="menu__item">TOURS</li>
           <li class="menu__item">BLOG</li>
           <li class="menu__item">CONTACTS</li>
         </ul>
