--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Module 5</title>
+    <title>Ra</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Dorsa" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pathway+Gothic+One" rel="stylesheet">
@@ -11,55 +11,30 @@
     <div class="wrapper">
       <header class="top">
         <ul class="menu">
-          <li class="menu__item">HOME</li>
-          <li class="menu__item">ABOUT
-            <ul class="submenu">
-              <li class="submenu__item"><a href="#">AGENCY</a></li>
-              <li class="submenu__item"><a href="#">NEWS</a></li>
-              <li class="submenu__item"><a href="#">TEAM</a></li>
+          <li class="menu__item">HQC
+            <ul class="pli">
+              <li class="hqc__item"><a href="#">ILA</a></li>
             </ul>
           </li>
-          <li class="menu__item">GALLERY</li>
-          <li class="journey menu__item">
-            <h1>JOURNEY</h1>
+          <li class="menu__item">PLI
+            <ul class="pli">
+              <li class="pli__item"><a href="#">PLI Dashboard</a></li>
+              <li class="pli__item"><a href="#">Waiting for spacing</a></li>
+            </ul>
           </li>
-          <li class="menu__item">TOURS</li>
-          <li class="menu__item">BLOG</li>
-          <li class="menu__item">CONTACTS</li>
+          <li class="menu__item">ARM
+            <ul class="pli">
+              <li class="arm__item"><a href="#">Digitization</a></li>
+              <li class="arm__item"><a href="#">Satellite Cloud QC</a></li>
+              <li class="arm__item"><a href="#">FieldDataQC</a></li>
+              <li class="arm__item"><a href="#">FieldScoresQC</a></li>
+            </ul>
+          </li>
+          <li class="menu__item">Audit</li>
+          <li class="menu__item">Inbox</li>
+          <li class="godpic"><a href="#"></a><img src="img/ra.png" alt=""></div>
         </ul>
       </header>
-      <main class="fon">
-        <div class="boat">
-          <div class="white">THERE ARE PLENTY OF PLACES</div>
-          <div class="blue">THAT ARE WORTH SEEING</div>
-          <div class="square1"><button><a href=""></a><img src="img/right.png" alt=""></button></div>
-          <div class="square2"><button><a href=""></a><img src="img/left.png" alt=""></button></div>
-        </div>
-        <div>
-          <h2>TOP DESTINATIONS</h2>
-          <div class="destination">
-            <div class="vien">
-              <div class="inside">
-                <h3>VIEN</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, expedita.</p>
-                <button class="details"><a href="">Details</a></button>
-              </div>
-            </div>
-            <div class="york">
-              <div class="inside">
-                <h3>NEW YORK</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, expedita.</p>
-                <button class="details"><a href="">Details</a></button>
-              </div>
-            </div>
-            <div class="paris">
-              <div class="inside">
-                <h3>PARIS</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, expedita.</p>
-                <button class="details"><a href="">Details</a></button>
-              </div>
-            </div>
-          </div>
           <button  class="totop">
             <a href="#"><img src="img/to-top.png" alt=""> </a>
           </button>
