--- a/index.html
+++ b/index.html
@@ -31,10 +31,31 @@
             </ul>
           </li>
           <li class="menu__item">Audit</li>
-          <li class="menu__item">Inbox</li>
-          <li class="godpic"><a href="#"></a><img src="img/ra.png" alt=""></div>
+          <li class="menu__item toright">Inbox</li>
+          <li class="godpic"></a><img src="img/ra.png" alt="", style="height: 100px;">
         </ul>
       </header>
+      <div class="boxes">
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Priority: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Priority<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Flight Date: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Flight Date<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Flight: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Flight<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Field: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Field<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Visit: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Visit<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Customer: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Customer<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Field Name: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Field Name<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Products: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Products<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Crop Type: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Crop Type<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Visit Type: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Visit Type<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Phase: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Phase<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="QC2 By: activate to sort column descending" style="width: 22px;" aria-sort="ascending">QC2 By<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Region: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Region<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Camera: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Camera<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="AM: activate to sort column descending" style="width: 22px;" aria-sort="ascending">AM<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Status: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Status<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Coverage: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Coverage<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="Assigned: activate to sort column descending" style="width: 22px;" aria-sort="ascending">Assigned<select></select></th>
+        <th class="priority_override sorting_asc" tabindex="0" aria-controls="dashboard" rowspan="1" colspan="1" data-column-index="0" aria-label="URL: activate to sort column descending" style="width: 22px;" aria-sort="ascending">URL<select></select></th>
+      </div>
           <button  class="totop">
             <a href="#"><img src="img/to-top.png" alt=""> </a>
           </button>
